pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
 name: dapi-test-pod
 namespace: myapp-dev
spec:
 containers:
   - name: test-container
     image: registry.k8s.io/busybox
     command: ["/bin/sh", "-c", "env"]
 restartPolicy: Never
