nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: myapp-dev
spec:
  type: LoadBalancer
  selector:
      app: nginx
  ports:
    - name: nginx-http
      port: 8080
      targetPort: 80
      protocol: TCP
    - name: nginx-https
      port: 8081
      targetPort: 443
      protocol: TCP
